--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,18 @@ packages = [{include = "benbucks_core"}]
 python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
-pylint = "^2.15.9"
 pre-commit = "^2.21.0"
+black = "^22.12.0"
+isort = "^5.11.4"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 79
+
+[tool.isort]
+line_length = 79
+profile = "black"
