--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pre-commit = "^2.21.0"
 black = "^22.12.0"
 isort = "^5.11.4"
 flake8 = "^6.0.0"
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core"]
