--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,27 @@
 [tool.poetry]
-name = "benbucks-core"
-version = "0.1.0"
-description = "Core elements for the BenBucks currency"
 authors = ["Ben Soyka <hello@bsoyka.me>"]
-readme = "README.md"
+description = "Core elements for the BenBucks currency"
+name = "benbucks-core"
 packages = [{include = "benbucks_core"}]
+readme = "README.md"
+version = "0.1.0"
 
 [tool.poetry.dependencies]
+beanie = "^1.16.6"
 python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "^2.21.0"
 black = "^22.12.0"
-isort = "^5.11.4"
 flake8 = "^6.0.0"
+isort = "^5.11.4"
+mongomock-motor = "^0.0.15"
+pre-commit = "^2.21.0"
 pytest = "^7.2.0"
+pytest-asyncio = "^0.20.3"
 
 [build-system]
-requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core"]
 
 [tool.black]
 line-length = 79
