--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -62,7 +62,11 @@ jobs:
                   path: .venv
                   key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
-            - name: Install dependencies and package
+            - name: Install dependencies
+              if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+              run: poetry install --no-interaction --no-root
+
+            - name: Install package
               run: poetry install --no-interaction
 
             - name: Run tests
