--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ mongomock-motor = "^0.0.15"
 pre-commit = "^2.21.0"
 pytest = "^7.2.0"
 pytest-asyncio = "^0.20.3"
+pytest-cov = "^4.0.0"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
